# LearnHub

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
app/: __init__.py  ai.py  config.py  db.py  main.py  models.py  services.py  templating.py  transcript.py  transcripts.py  youtube.py
app/ai/: __init__.py  base.py  errors.py  factory.py  gemini.py  prompts.py
app/routers/: ai.py  imports.py  items.py  quiz.py  subjects.py
app/static/: styles.css
app/templates/: base.html  index.html  practice.html  subject.html
app/templates/partials/: ai_error.html  ai_result.html  floating_progress.html  goal_banner.html  import_error.html  import_result.html  item_ai.html  item_row.html  item_status_response.html  progress.html  quiz.html  quiz_launcher.html  quiz_question.html  quiz_result.html  refresh_result.html  rename_form.html  resource.html  resources.html  subject_header.html  subject_list.html
docs/superpowers/plans/: 2026-06-28-practice-multi-unit-quiz.md
docs/superpowers/specs/: 2026-06-22-subject-rename-edit-mode-design.md  2026-06-28-ai-quiz-generation-design.md  2026-06-28-practice-multi-unit-quiz-design.md
tests/: conftest.py  test_ai.py  test_app.py  test_quiz.py  test_youtube_parse.py
